--- a/generator.html
+++ b/generator.html
@@ -1276,7 +1276,8 @@
                        ["mineralplanet3.png", "mineral3"],
                        ["barrenplanet1.png", "barren"],
                        ["barrenplanet1.png", "barren"],
-                       ["barrenplanet1.png", "barren"],
+                       ["barrenplanet2.png", "barren"],
+                       ["barrenplanet2.png", "barren"],
                        ["gasplanet1.png",    "gas"],
                        ["gasplanet1.png",    "gas"],
                        ["junkplanet1.png",   "junk"]];
@@ -1654,4 +1655,4 @@
     </script>
   </body>
 </html>
-<!--Version # 0.357--->
+<!--Version 0.358--->
