--- a/test8.html
+++ b/test8.html
@@ -13,24 +13,24 @@
         grid-auto-rows: 60px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px;
         grid-template-areas:
         "marketCaption"
-        "market1a"  ///Colonies
-        "market1b"  ///Colonies' Price
-        "market2a"  ///Mining Stations
-        "market2b"  ///Mining Stations' Price
-        "market3a"  ///Buildings
-        "market3b"  ///Buildings' Price
-        "market4a"  ///Corvettes
-        "market4b"  ///Corvettes' Price
-        "market5a"  ///Cruisers
-        "market5b"  ///Cruisers' Price
-        "market6a"  ///Destroyers
-        "market6b"  ///Destroyers' Price
-        "market7a"  ///Dreadnaughts
-        "market7b"  ///Dreadnaughts' Price
-        "market8a"  ///Titans
-        "market8b"  ///Titans' Price
-        "market9a"  ///TBD
-        "market9b"; ///TBD Price
+        "market1a"
+        "market1b"
+        "market2a"
+        "market2b"
+        "market3a"
+        "market3b"
+        "market4a"
+        "market4b"
+        "market5a"
+        "market5b"
+        "market6a"
+        "market6b"
+        "market7a"
+        "market7b"
+        "market8a"
+        "market8b"
+        "market9a"
+        "market9b";
       }
       #marketMenu {}
       .marketCell { font-size:90%; background:#7096cf; }
@@ -85,4 +85,4 @@
   
   </body>
 </html>
-<!--Version 1--->
+<!--Version 2--->
