--- a/test8.html
+++ b/test8.html
@@ -35,24 +35,24 @@
       #marketMenu {}
       .marketCell { font-size:110%; background:#7096cf; text-align:center; }
       .marketCell span { text-align:center; }
-      .marketCaption { grid-area:marketCaption; }
-      .market1a { grid-area:market1a; }
+      .marketCaption { grid-area:marketCaption; font-size:120%; }
+      .market1a { grid-area:market1a; font-size:120%; }
       .market1b { grid-area:market1b; }
-      .market2a { grid-area:market2a; }
+      .market2a { grid-area:market2a; font-size:120%; }
       .market2b { grid-area:market2b; }
-      .market3a { grid-area:market3a; }
+      .market3a { grid-area:market3a; font-size:120%; }
       .market3b { grid-area:market3b; }
-      .market4a { grid-area:market4a; }
+      .market4a { grid-area:market4a; font-size:120%; }
       .market4b { grid-area:market4b; }
-      .market5a { grid-area:market5a; }
+      .market5a { grid-area:market5a; font-size:120%; }
       .market5b { grid-area:market5b; }
-      .market6a { grid-area:market6a; }
+      .market6a { grid-area:market6a; font-size:120%; }
       .market6b { grid-area:market6b; }
-      .market7a { grid-area:market7a; }
+      .market7a { grid-area:market7a; font-size:120%; }
       .market7b { grid-area:market7b; }
-      .market8a { grid-area:market8a; }
+      .market8a { grid-area:market8a; font-size:120%; }
       .market8b { grid-area:market8b; }
-      .market9a { grid-area:market9a; }
+      .market9a { grid-area:market9a; font-size:120%; }
       .market9b { grid-area:market9b; }
       
     </style>
@@ -85,4 +85,4 @@
   
   </body>
 </html>
-<!--Version 4--->
+<!--Version 5--->
