--- a/test8.html
+++ b/test8.html
@@ -9,7 +9,7 @@
       .marketMenu {
         position:fixed; width: 190px; height: 310px; top:100px; left:10px; font-family: 'MedievalSharp', cursive; font-size:80%; border: 2px solid lightgray; 
         border-radius: 5px; margin: 15px; overflow:scroll; display:inline-grid;  
-        gap: 1.75px; background: #1d4b96; transition:0.4s; grid-template-columns: repeat(1, 1fr);
+        gap: 2px; background: #1d4b96; transition:0.4s; grid-template-columns: repeat(1, 1fr);
         grid-auto-rows: 60px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px;
         grid-template-areas:
         "marketCaption"
@@ -33,26 +33,26 @@
         "market9b";
       }
       #marketMenu {}
-      .marketCell { font-size:110%; background:#7096cf; text-align:center; }
+      .marketCell { font-size:90%; background:#7096cf; text-align:center; padding:5px; }
       .marketCell span { text-align:center; }
-      .marketCaption { grid-area:marketCaption; font-size:120%; }
-      .market1a { grid-area:market1a; font-size:120%; }
+      .marketCaption { grid-area:marketCaption; font-size:170%; }
+      .market1a { grid-area:market1a; font-size:150%; }
       .market1b { grid-area:market1b; }
-      .market2a { grid-area:market2a; font-size:120%; }
+      .market2a { grid-area:market2a; font-size:150%; }
       .market2b { grid-area:market2b; }
-      .market3a { grid-area:market3a; font-size:120%; }
+      .market3a { grid-area:market3a; font-size:150%; }
       .market3b { grid-area:market3b; }
-      .market4a { grid-area:market4a; font-size:120%; }
+      .market4a { grid-area:market4a; font-size:150%; }
       .market4b { grid-area:market4b; }
-      .market5a { grid-area:market5a; font-size:120%; }
+      .market5a { grid-area:market5a; font-size:150%; }
       .market5b { grid-area:market5b; }
-      .market6a { grid-area:market6a; font-size:120%; }
+      .market6a { grid-area:market6a; font-size:150%; }
       .market6b { grid-area:market6b; }
-      .market7a { grid-area:market7a; font-size:120%; }
+      .market7a { grid-area:market7a; font-size:150%; }
       .market7b { grid-area:market7b; }
-      .market8a { grid-area:market8a; font-size:120%; }
+      .market8a { grid-area:market8a; font-size:150%; }
       .market8b { grid-area:market8b; }
-      .market9a { grid-area:market9a; font-size:120%; }
+      .market9a { grid-area:market9a; font-size:150%; }
       .market9b { grid-area:market9b; }
       
     </style>
@@ -85,4 +85,4 @@
   
   </body>
 </html>
-<!--Version 5--->
+<!--Version 6--->
