--- a/generator.html
+++ b/generator.html
@@ -520,7 +520,7 @@
           mineral3: { surveyType: "Ringed World", surveyImage: "mineralplanet3.png", surveyCost: "5 Credits",
                      surveyDesc: "A moderately sized gas giant with a small assortment of rings rich in minerals.",
                      surveyPop:0 },
-          barren: { surveyType: "Barren", surveyImage: "barrenplanet1.png", surveyCost: "N/A", 
+          barren: { surveyType: "Barren World", surveyImage: "barrenplanet1.png", surveyCost: "N/A", 
                    surveyDesc: "Scanning the planet shows nothing of importance, as it lacks decently sized deposits of resources.",
                    surveyPop:0 },
           junk: { surveyType: "Junk World", surveyImage: "junkplanet1.png", surveyCost: "N/A",
@@ -1655,4 +1655,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.361--->
+<!--Version 0.362--->
