--- a/test8.html
+++ b/test8.html
@@ -61,7 +61,7 @@
   <body>
   
     <div class="marketMenu" id="marketMenu">
-      <div class="marketCell marketCaption"><span> Costs </span></div>
+      <div class="marketCell marketCaption"><span><i> Costs </i></span></div>
       <div class="marketCell market1a"><span> Colonies </span></div>
       <div class="marketCell market1b"><span> 20 Minerals, 40 Credits, 20 Authority, 100 Supplies </span></div>
       <div class="marketCell market2a"><span> Mining Stations </span></div>
@@ -85,4 +85,4 @@
   
   </body>
 </html>
-<!--Version 8--->
+<!--Version 9--->
