--- a/test8.html
+++ b/test8.html
@@ -3,6 +3,7 @@
   
     <title> Test 8 </title>
     <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon:ital@1&display=swap" rel="stylesheet">
     
     <style>
     
@@ -35,7 +36,7 @@
       #marketMenu {}
       .marketCell { font-size:90%; background:#7096cf; text-align:left; padding:7.5px; }
       .marketCell span { text-align:center; }
-      .marketCaption { grid-area:marketCaption; font-size:160%; text-align:center; }
+      .marketCaption { grid-area:marketCaption; font-size:180%; text-align:center; font-family: 'IM Fell French Canon', serif; }
       .market1a { grid-area:market1a; font-size:140%; text-align:center; }
       .market1b { grid-area:market1b; }
       .market2a { grid-area:market2a; font-size:140%; text-align:center; }
@@ -85,4 +86,4 @@
   
   </body>
 </html>
-<!--Version 9--->
+<!--Version 10--->
