--- a/test8.html
+++ b/test8.html
@@ -36,7 +36,7 @@
       #marketMenu {}
       .marketCell { font-size:90%; background:#7096cf; text-align:left; padding:7.5px; }
       .marketCell span { text-align:center; }
-      .marketCaption { grid-area:marketCaption; font-size:180%; text-align:center; font-family: 'IM Fell French Canon', serif; }
+      .marketCaption { grid-area:marketCaption; font-size:210%; text-align:center; font-family: 'IM Fell French Canon', serif; }
       .market1a { grid-area:market1a; font-size:140%; text-align:center; }
       .market1b { grid-area:market1b; }
       .market2a { grid-area:market2a; font-size:140%; text-align:center; }
@@ -62,7 +62,7 @@
   <body>
   
     <div class="marketMenu" id="marketMenu">
-      <div class="marketCell marketCaption"><span><i> Costs </i></span></div>
+      <div class="marketCell marketCaption"><span><i> The Market </i></span></div>
       <div class="marketCell market1a"><span> Colonies </span></div>
       <div class="marketCell market1b"><span> 20 Minerals, 40 Credits, 20 Authority, 100 Supplies </span></div>
       <div class="marketCell market2a"><span> Mining Stations </span></div>
