--- a/generator.html
+++ b/generator.html
@@ -237,16 +237,16 @@
       #preferenceButton5 { border-radius:50%; background:gray; color:white; padding:2px; width:30px; height:30px; font-size:80%; }
       #preferenceButton6 { border-radius:50%; background:gray; color:white; padding:2px; width:30px; height:30px; font-size:80%; }
       
-      .shipBuilderMenu { position:absolute; top:0px; left:0px; width: 125px; height: 240px; font-family: 'MedievalSharp', cursive; 
+      .shipBuilderMenu { position:absolute; top:0px; left:0px; width: 120px; height: 240px; font-family: 'MedievalSharp', cursive; 
         font-size:80%; border: 2px solid lightgray; border-radius: 5px; display: none; margin: 15px;
-        grid-template-columns: 41px 82px; grid-auto-rows: auto;
+        grid-template-columns: repeat(3, 1fr); grid-auto-rows: auto;
         grid-template-areas:
-          "builderLabel   builderLabel"
-          "builderButton1 builderCaption1"  
-          "builderButton2 builderCaption2"
-          "builderButton3 builderCaption3"  
-          "builderButton4 builderCaption4"
-          "builderButton5 builderCaption5"; 
+          "builderLabel   builderLabel    builderLabel"
+          "builderButton1 builderCaption1 builderCaption1"  
+          "builderButton2 builderCaption2 builderCaption2"
+          "builderButton3 builderCaption3 builderCaption3"  
+          "builderButton4 builderCaption4 builderCaption4"
+          "builderButton5 builderCaption5 builderCaption5"; 
         gap: 1.75px; background: #1d4b96; transition:1.2s;
       }
       
@@ -1659,4 +1659,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.363--->
+<!--Version 0.364--->
