--- a/generator.html
+++ b/generator.html
@@ -253,7 +253,7 @@
       .builderCell { background: lightgray; padding: 3px; position: relative; overflow:hidden; background:#7096cf; }
       .builderCell p { font-family: 'MedievalSharp', cursive; font-size:90%; }
       .builderCell span { font-family: 'MedievalSharp', cursive; font-size:90%; }
-      .builderLabel { grid-area:builderLabel; font-family: 'IM Fell French Canon', serif; font-size:130%; }
+      .builderLabel { grid-area:builderLabel; font-family: 'IM Fell French Canon', serif; font-size:130%; text-align:center; }
       .builderButton1 { grid-area:builderButton1; }
       .builderButton2 { grid-area:builderButton2; }
       .builderButton3 { grid-area:builderButton3; }
@@ -1659,4 +1659,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.366--->
+<!--Version 0.367--->
