--- a/generator.html
+++ b/generator.html
@@ -271,9 +271,12 @@
       #builderButton4 { background:navy; color:white; padding:0px; font-size:80%; width:32px; height:24px; }
       #builderButton5 { background:navy; color:white; padding:0px; font-size:80%; width:32px; height:24px; }
       
+      .marketbutton { position:fixed; width:30px; height:30px; top:100px; left:10px; display:block; border: 2px solid lightgray; border-radius:20%;
+        font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; }
+      
       .marketMenu {
         position:fixed; width: 170px; height: 310px; top:100px; left:10px; font-family: 'MedievalSharp', cursive; font-size:80%; border: 2px solid lightgray; 
-        border-radius: 5px; margin: 15px; overflow:scroll; display:inline-grid;  
+        border-radius: 5px; margin: 15px; overflow:scroll; display:none;  
         gap: 2px; background: #1d4b96; transition:0.4s; grid-template-columns: repeat(1, 1fr);
         grid-auto-rows: 60px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px;
         grid-template-areas:
@@ -404,6 +407,8 @@
       <div class="cell pop"><span> This planet contains </span><span id="surveyPop"> 0 </span><span> Population Units. </span></div>
       <div class="cell bottom"></div>
     </div>
+
+    <button class="marketButton"><span> M </span></button>
 
     <div class="marketMenu" id="marketMenu">
       <div class="marketCell marketCaption"><span><i> The Market </i></span></div>
