--- a/generator.html
+++ b/generator.html
@@ -409,9 +409,9 @@
       <div class="cell bottom"></div>
     </div>
 
-    <button class="marketButton" id="marketButton" onclick="showMarket"><span> M </span></button>
+    <button class="marketButton" id="marketButton" onclick="showMarket()"><span> M </span></button>
 
-    <div class="marketMenu" id="marketMenu" onclick="hideMarket">
+    <div class="marketMenu" id="marketMenu" onclick="hideMarket()">
       <div class="marketCell marketCaption"><span><i> The Market </i></span></div>
       <div class="marketCell market1a"><span> Colonies </span></div>
       <div class="marketCell market1b"><span> 20 Minerals, 40 Credits, 20 Authority, 100 Supplies </span></div>
@@ -1746,4 +1746,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.371--->
+<!--Version 0.372--->
