--- a/generator.html
+++ b/generator.html
@@ -302,9 +302,9 @@
         "market9b";
       }
       #marketMenu {}
-      .marketCell { font-size:90%; background:#7096cf; text-align:left; padding:7.5px; }
+      .marketCell { font-size:90%; background:#7096cf; text-align:left; padding:7.5px; margin-left:5px; margin-right:5px; }
       .marketCell span { text-align:center; }
-      .marketCaption { grid-area:marketCaption; font-size:210%; text-align:center; font-family: 'IM Fell French Canon', serif; }
+      .marketCaption { grid-area:marketCaption; font-size:210%; text-align:center; font-family: 'IM Fell French Canon', serif; margin-top:7.5px; }
       .market1a { grid-area:market1a; font-size:140%; text-align:center; font-family: 'IM Fell French Canon', serif; }
       .market1b { grid-area:market1b; }
       .market2a { grid-area:market2a; font-size:140%; text-align:center; font-family: 'IM Fell French Canon', serif; }
@@ -1746,4 +1746,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.373--->
+<!--Version 0.374--->
