--- a/generator.html
+++ b/generator.html
@@ -91,7 +91,7 @@
       #HUDAuthorityIcon { image-rendering:pixelated; position:relative; height:25px; width:25px; }
       #HUDSupplyIcon { image-rendering:pixelated; position:relative; height:25px; width:25px; }
       
-      .HUDPointContainer { position:fixed; top:20px; left:1200px; width:60px; height:10px; font-family: 'IM Fell French Canon', serif;
+      .HUDPointContainer { position:fixed; top:20px; left:1200px; width:60px; height:10px; font-family: 'MedievalSharp', cursive;
         font-size:70%; display:block; background:royalblue; text-align:center; }
       
       .planetMenu { position:absolute; top:20px; left:20px; width: 180px; height: 140px; font-family: 'MedievalSharp', cursive; 
@@ -412,7 +412,7 @@
     <button class="marketButton" id="marketButton" onclick="showMarket()"><span> M </span></button>
 
     <div class="marketMenu" id="marketMenu" onclick="hideMarket()">
-      <div class="marketCell marketCaption"><span><i> The Market </i></span></div>
+      <div class="marketCell marketCaption"><span><i> Prices </i></span></div>
       <div class="marketCell market1a"><span> Colonies </span></div>
       <div class="marketCell market1b"><span> 20 Minerals, 40 Credits, 20 Authority, 100 Supplies </span></div>
       <div class="marketCell market2a"><span> Mining Stations </span></div>
@@ -1746,4 +1746,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.375--->
+<!--Version 0.376--->
