--- a/generator.html
+++ b/generator.html
@@ -35,25 +35,25 @@
       }
       #info-box { display:none; }
       
-      .cell { background: lightgray; padding: 3px; position: relative; overflow:hidden; font-size:80%; background:#7096cf; }
+      .cell { padding: 3px; position: relative; overflow:hidden; font-size:80%; background:#7096cf; }
       .cell p { font-family: 'MedievalSharp', cursive; font-size:90%; }
       .cell span { font-family: 'MedievalSharp', cursive; font-size:90%; }
       .name { grid-area: name; text-align:center; }
       .name span { font-size:145%; font-family: 'IM Fell French Canon', serif; }
       .sprite { grid-area:sprite; }
       .type { grid-area:type; text-align:center }
-      .type span { font-size:120%; }
+      .type span { font-size:140%; }
       .output { grid-area:output; text-align:center; }
       .output span { font-size:90%; }
       .cost { grid-area: cost; text-align:center; }
       .cost span { font-size:90%; }
       .size { grid-area:size; text-align:center }
-      .size span { font-size:90%; }
+      .size span { font-size:110%; }
       .habit { grid-area:habit; text-align:center; }
       .habit span { font-size:90%; }
-      .desc { grid-area: desc; text-align:center; font-size:90%; }
+      .desc { grid-area: desc; text-align:center; font-size:110%; }
       .pop { grid-area: pop; text-align:center; }
-      .pop span { font-size:110% }
+      .pop span { font-size:130% }
       .top { grid-area:top; display:none; }
       .bottom { grid-area:bottom; display:none; }
       #surveyImage { background:grey; border-radius:50%; padding:0.2px; margin-top:2px; margin-bottom:2px; margin-left:10px; margin-right:10px; }
@@ -1746,4 +1746,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.377--->
+<!--Version 0.378--->
