--- a/test9.html
+++ b/test9.html
@@ -12,7 +12,7 @@
         grid-template-columns: repeat(3, 1fr); grid-auto-rows: auto;
         grid-template-areas:
           "tradeCaption   tradeCaption   tradeCaption   tradeCaption   tradeCaption"
-          "tradeMinerals1 tradeMinerals2 tradeMinerals3 tradeMinerals4 tradeMinerals5";
+          "tradeMinerals1 tradeMinerals2 tradeMinerals3 tradeMinerals4 tradeMinerals5"
           "tradeSupplies1 tradeSupplies2 tradeSupplies3 tradeSupplies4 tradeSupplies5";
         gap: 1.75px; background: #1d4b96;transition:0.4s;
       }
