--- a/test9.html
+++ b/test9.html
@@ -28,7 +28,7 @@
       .tradeMinerals2 { grid-area:tradeMinerals2; }
       .tradeMinerals3 { grid-area:tradeMinerals3; }
       .tradeMinerals3 button { position:relative; width:50px; height:40px; top:7.5px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
-        font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; }
+        font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; }
       .tradeMinerals4 { grid-area:tradeMinerals4; }
       .tradeMinerals5 { grid-area:tradeMinerals5; }
       .tradeMinerals5 img { position:relative; width:40px; height:40px; top:7.5px; }
@@ -37,7 +37,7 @@
       .tradeSupplies2 { grid-area:tradeSupplies2; }
       .tradeSupplies3 { grid-area:tradeSupplies3; }
       .tradeSupplies3 button { position:relative; width:50px; height:40px; top:7.5px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
-        font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; }
+        font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; }
       .tradeSupplies4 { grid-area:tradeSupplies4; }
       .tradeSupplies5 { grid-area:tradeSupplies5; }
       .tradeSupplies5 img { position:relative; width:40px; height:40px; top:7.5px; }
@@ -46,7 +46,7 @@
       .tradeMinerals7 { grid-area:tradeMinerals7; }
       .tradeMinerals8 { grid-area:tradeMinerals8; }
       .tradeMinerals8 button { position:relative; width:50px; height:40px; top:7.5px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
-        font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; }
+        font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; }
       .tradeMinerals9 { grid-area:tradeMinerals9; }
       .tradeMinerals10 { grid-area:tradeMinerals10; }
       .tradeMinerals10 img { position:relative; width:40px; height:40px; top:7.5px; }
@@ -55,7 +55,7 @@
       .tradeSupplies7 { grid-area:tradeSupplies7; }
       .tradeSupplies8 { grid-area:tradeSupplies8; }
       .tradeSupplies8 button { position:relative; width:50px; height:40px; top:7.5px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
-        font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; }
+        font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; }
       .tradeSupplies9 { grid-area:tradeSupplies9; }
       .tradeSupplies10 { grid-area:tradeSupplies10; }
       .tradeSupplies10 img { position:relative; width:40px; height:40px; top:7.5px; }
@@ -90,4 +90,4 @@
     
   </body>
 </html>
-<!--Version 7--->
+<!--Version 8--->
