--- a/generator.html
+++ b/generator.html
@@ -324,7 +324,7 @@
       .market9a { grid-area:market9a; font-size:140%; text-align:center; font-family: 'IM Fell French Canon', serif; }
       .market9b { grid-area:market9b; }
       
-      tradeMenu { position:fixed; width: 300px; height: 300px; top:100px; left:10px; font-family: 'MedievalSharp', cursive; 
+      .tradeMenu { position:fixed; width: 300px; height: 300px; top:100px; left:10px; font-family: 'MedievalSharp', cursive; 
         font-size:80%; border: 2px solid lightgray; border-radius: 5px; display:inline-grid; margin: 15px;
         grid-template-columns: repeat(5, 1fr); grid-auto-rows: auto;
         grid-template-areas:
@@ -335,8 +335,9 @@
           "tradeSupplies6 tradeSupplies7 tradeSupplies8 tradeSupplies9 tradeSupplies10"
           ;
         gap: 1.75px; background: #1d4b96;transition:0.4s;
+      }
       
-        #tradeMenu {}
+       #tradeMenu {}
       .tradeCell { padding: 3px; position: relative; overflow:hidden; font-size:90%; background:#7096cf; text-align:center; font-family: 'MedievalSharp', cursive; }
       .tradeCaption { grid-area:tradeCaption; font-size:170%; font-family: 'IM Fell French Canon', serif; margin-top:5px; }
       .tradeMinerals1 { grid-area:tradeMinerals1; }
@@ -1846,4 +1847,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.379--->
+<!--Version 0.380--->
