--- a/generator.html
+++ b/generator.html
@@ -589,7 +589,7 @@
       <div class="marketCell market9b"><span> TBD </span></div>
     </div>
 
-    <button class="marketButton" id="marketButton" onclick="showTradeMenu()"><img src="creditIcon.png"></img></button>
+    <button class="tradeButton" id="tradeButton" onclick="showTradeMenu()"><img src="crediticon.png"></img></button>
 
     <div class="tradeMenu" id="tradeMenu" onclick="hideTradeMenu()">
       <div class="tradeCell tradeCaption"><span> The Market </span></div>
@@ -1865,4 +1865,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.381--->
+<!--Version 0.382--->
