--- a/generator.html
+++ b/generator.html
@@ -590,28 +590,28 @@
 
     <button class="tradeButton" id="tradeButton" onclick="showTradeMenu()"><span> M </span></button>
 
-    <div class="tradeMenu" id="tradeMenu" onclick="hideTradeMenu()">
-      <div class="tradeCell tradeCaption"><span> The Market </span></div>
-      <div class="tradeCell tradeMinerals1"><img src="crediticon.png"></img></div>
-      <div class="tradeCell tradeMinerals2"><span> 30 Credits </span></div>
+    <div class="tradeMenu" id="tradeMenu">
+      <div class="tradeCell tradeCaption" onclick="hideTradeMenu()"><span> The Market </span></div>
+      <div class="tradeCell tradeMinerals1" onclick="hideTradeMenu()"><img src="crediticon.png"></img></div>
+      <div class="tradeCell tradeMinerals2" onclick="hideTradeMenu()"><span> 30 Credits </span></div>
       <div class="tradeCell tradeMinerals3"><button onclick="trade1()"> --> </button></div>
-      <div class="tradeCell tradeMinerals4"><span> 20 Minerals </span></div>
-      <div class="tradeCell tradeMinerals5"><img src="gemstoneicon.png"></img></div>
-      <div class="tradeCell tradeSupplies1"><img src="crediticon.png"></img></div>
-      <div class="tradeCell tradeSupplies2"><span> 30 Credits </span></div>
+      <div class="tradeCell tradeMinerals4" onclick="hideTradeMenu()"><span> 20 Minerals </span></div>
+      <div class="tradeCell tradeMinerals5" onclick="hideTradeMenu()"><img src="gemstoneicon.png"></img></div>
+      <div class="tradeCell tradeSupplies1" onclick="hideTradeMenu()"><img src="crediticon.png"></img></div>
+      <div class="tradeCell tradeSupplies2" onclick="hideTradeMenu()"><span> 30 Credits </span></div>
       <div class="tradeCell tradeSupplies3"><button onclick="trade2()"> --> </button></div>
-      <div class="tradeCell tradeSupplies4"><span> 20 Supplies </span></div>
-      <div class="tradeCell tradeSupplies5"><img src="supplyicon.png"></img></div>
-      <div class="tradeCell tradeMinerals6"><img src="gemstoneicon.png"></img></div>
-      <div class="tradeCell tradeMinerals7"><span> 30 Minerals </span></div>
+      <div class="tradeCell tradeSupplies4" onclick="hideTradeMenu()"><span> 20 Supplies </span></div>
+      <div class="tradeCell tradeSupplies5" onclick="hideTradeMenu()"><img src="supplyicon.png"></img></div>
+      <div class="tradeCell tradeMinerals6" onclick="hideTradeMenu()"><img src="gemstoneicon.png"></img></div>
+      <div class="tradeCell tradeMinerals7" onclick="hideTradeMenu()"><span> 30 Minerals </span></div>
       <div class="tradeCell tradeMinerals8"><button onclick="trade3()"> --> </button></div>
-      <div class="tradeCell tradeMinerals9"><span> 20 Credits </span></div>
-      <div class="tradeCell tradeMinerals10"><img src="crediticon.png"></img></div>
-      <div class="tradeCell tradeSupplies6"><img src="supplyicon.png"></img></div>
-      <div class="tradeCell tradeSupplies7"><span> 30 Supplies </span></div>
+      <div class="tradeCell tradeMinerals9" onclick="hideTradeMenu()"><span> 20 Credits </span></div>
+      <div class="tradeCell tradeMinerals10" onclick="hideTradeMenu()"><img src="crediticon.png"></img></div>
+      <div class="tradeCell tradeSupplies6" onclick="hideTradeMenu()"><img src="supplyicon.png"></img></div>
+      <div class="tradeCell tradeSupplies7" onclick="hideTradeMenu()"><span> 30 Supplies </span></div>
       <div class="tradeCell tradeSupplies8"><button onclick="trade4()"> --> </button></div>
-      <div class="tradeCell tradeSupplies9"><span> 20 Credits </span></div>
-      <div class="tradeCell tradeSupplies10"><img src="crediticon.png"></img></div>
+      <div class="tradeCell tradeSupplies9" onclick="hideTradeMenu()"><span> 20 Credits </span></div>
+      <div class="tradeCell tradeSupplies10" onclick="hideTradeMenu()"><img src="crediticon.png"></img></div>
     </div>
 
     <div class="eventA" id="event1" onclick="moveEvent(this)">
@@ -1889,4 +1889,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.383--->
+<!--Version 0.384--->
