--- a/background.html
+++ b/background.html
@@ -2,8 +2,11 @@
   <head>
     <title> Background Test </title>
     <style>
-      .backgroundStar { display:none; position:absolute; width:3px; height:3px; }
-      #bks1 {}
+      
+       body { background:#030a17; }
+      
+      .backgroundStar { display:none; position:absolute; width:3px; height:3px; background:white; border:0.2px solid grey; }
+      #bks1 {} 
       #bks2 {}
       #bks3 {}
       #bks4 {}
@@ -49,4 +52,4 @@
     </script>
   </body>
 </html>
-<!--Version 1--->
+<!--Version 2--->
