--- a/background.html
+++ b/background.html
@@ -37,7 +37,7 @@
     <script>
       
       function randomBackgroundStarPlacement() {
-        var allBackgroundStars = document.querySelectAll('.backgroundStar');
+        var allBackgroundStars = document.querySelectorAll('.backgroundStar');
         for (const bksEl of allBackgroundStars) {
           var randomTop = Math.floor(Math.random * 900) + 1;
           var randomLeft = Math.floor(Math.random * 1100) + 1;
@@ -52,4 +52,4 @@
     </script>
   </body>
 </html>
-<!--Version 2--->
+<!--Version 3--->
