--- a/background.html
+++ b/background.html
@@ -5,7 +5,7 @@
       
        body { background:#030a17; }
       
-      .backgroundStar { display:none; position:absolute; width:3px; height:3px; background:white; border:0.2px solid grey; transition:3s; }
+      .backgroundStar { display:none; position:absolute; width:3px; height:3px; background:white; border:0.2px solid grey; transition:3s; border-radius:50%; }
       #bks1 {} 
       #bks2 {}
       #bks3 {}
