--- a/generator.html
+++ b/generator.html
@@ -138,7 +138,8 @@
       #turnButton { border-radius:10%; background:slateblue; color:white; font-family:'MedievalSharp', cursive; width:90px; margin:1px; font-size:80%; 
                     position:fixed; display:block; top:750px; left:1100px; }
       
-      .backgroundStar { display:none; position:absolute; width:2px; height:2px; background:white; border:0.2px solid grey; transition:4s; border-radius:50%; }
+      .backgroundStar { display:none; position:absolute; width:2px; height:2px; background:white; border:0.4px solid grey; 
+        opacity:40%; transition:4s; border-radius:50%; }
       
       .designationMenu { position:absolute; top:20px; left:20px; width: 180px; height: 190px; font-family: 'MedievalSharp', cursive; 
         font-size:80%; border: 2px solid lightgray; border-radius: 5px; display: none; margin: 15px;
@@ -1651,7 +1652,7 @@
         var allBackgroundStars = document.querySelectorAll('.backgroundStar');
         for (const bksEl of allBackgroundStars) {
           var randomTop = Number(Math.floor(Math.random() * 740) + 61);
-          var randomLeft = Number(Math.floor(Math.random() * 1300) + 1);
+          var randomLeft = Number(Math.floor(Math.random() * 1280) + 21);
           bksEl.style.top = randomTop + "px";
           bksEl.style.left = randomLeft + "px";
           bksEl.style.display = "block";
@@ -1966,4 +1967,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.391--->
+<!--Version 0.392--->
