--- a/generator.html
+++ b/generator.html
@@ -463,7 +463,7 @@
 
     <button id="turnButton" onclick="nextTurn()"> Next Turn </button>
 
-    <div class="backgroundStar" id="bks"></div>
+    <div class="backgroundStar" id="bkstar"></div>
     
     <div class="iconCloner">
       <img class="colonyMarker" id="passiveColonyMarker" src="passivecolony.png" onclick="surveyColony(this)"></img>
@@ -1950,4 +1950,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.397--->
+<!--Version 0.398--->
