--- a/generator.html
+++ b/generator.html
@@ -1621,7 +1621,7 @@
       }
       function generateBackgroundStarPlacement() {
         var bkstarNumber = 0;
-        if (bkstarNumber < 60) {
+        while (bkstarNumber < 60) {
           var star = $("bkstar");
           var newStar = star.cloneNode(true);
           var container = $("system1");
@@ -1629,7 +1629,7 @@
           container.appendChild(newStar);
           bkstarNumber++;
         }
-        else if (bkstarNumber = 60) {
+        if (bkstarNumber == 60) {
           console.log("All stars have been accounted for");
         }
         var allBackgroundStars = document.querySelectorAll('.backgroundStar');
@@ -1950,4 +1950,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.398--->
+<!--Version 0.399--->
