--- a/generator.html
+++ b/generator.html
@@ -461,6 +461,8 @@
     
     <div class="HUDPointContainer"><span id="HUDPointNumber"> 0 </span></div>
 
+    <div class="backgroundStar" id="bkstar"></div>
+
     <button id="turnButton" onclick="nextTurn()"> Next Turn </button>
 
     <div class="iconCloner">
@@ -511,8 +513,6 @@
       <img class="planet" id="p4"></img>
       <img class="planet" id="p5"></img>
       <img class="planet" id="p6"></img>
-
-      <div class="backgroundStar" id="bkstar"></div>
 
       <div class="starbaseContainer" id="starbaseContainer">
         <img class="passiveStarbase" id="passiveStarbase-s1" data-ships="0" src="starbaseicon.png" 
@@ -1628,9 +1628,8 @@
         while (bkstarNumber < 80) {
           var star = $("bkstar");
           var newStar = star.cloneNode(true);
-          var container = $("system1");
           newStar.id = star.id + "-" + bkstarNumber;
-          container.appendChild(newStar);
+          star.appendChild(newStar);
           bkstarNumber++;
         }
         if (bkstarNumber == 80) {
@@ -1954,4 +1953,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.402--->
+<!--Version 0.403--->
